k8s/github-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  github-deployment
  labels:
    name:  github-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github
  template:
    metadata:
      labels:
        app:  github
    spec:
      containers:
      - image:  github
        imagePullPolicy: IfNotPresent
        name:  github-container
        resources:
          requests:
            cpu: "250m"
            memory: "128M"
          limits:
            cpu: '500m'
            memory: "256M"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  github-port
