k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router-deployment
  labels:
    name:  router-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
      - image:  router
        imagePullPolicy: IfNotPresent
        name:  router-service
        resources:
          requests:
            cpu: "250m"
            memory: "250M"
          limits:
            cpu: "500m"
            memory: "500M"
        livenessProbe:
          httpGet:
            path: /api/router/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/router/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10     
        ports:
        - containerPort:  3000
          name:  router-port
