k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    name:  sandbox-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app:  sandbox
    spec:
      serviceAccountName: resource-manager
      containers:
      - image:  sandbox
        imagePullPolicy: IfNotPresent
        name:  sandbox-container
        resources:
          requests:
            cpu: "512m"
            memory: "500M"
          limits: 
            cpu: "1"
            memory: '1Gi'
        ports:
        - containerPort:  3000
          name:  sandbox-port
        livenessProbe:
          httpGet:
            path: /api/sandbox/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/sandbox/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
  selector: 
    matchLabels: 
      app: sandbox
