k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-space-ingress
  labels:
    app.kubernetes.io/name: code-space-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/sandbox
        pathType: Prefix
        backend:
          service:
            name: sandbox-service
            port:
              number: 80
  - host: "*.preview.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-service
            port:
              number: 80
  - host: "*.agent.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router-service
            port:
              number: 80
